--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://ppete2.github.io/Leaflet.PolylineMeasure/Leaflet.PolylineMeasure.css" />
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="./css/easy-button.css" />
+    <link rel="stylesheet" href="./css/sondehubcard.css" />
+    <link rel="stylesheet" href="./css/skewt.css" />
     <!-- JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://ppete2.github.io/Leaflet.PolylineMeasure/Leaflet.PolylineMeasure.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="./js/Leaflet.Control.Custom.js"></script>
+    <script src="./js/easy-button.js"></script>
+    <script src="./js/utils.js"></script>
+    <script src="./js/skewt.js"></script>
+    
 
     <!-- Stylesheet to make map full-screen -->
     <style>
@@ -32,6 +42,10 @@
 
     <script language="javascript">
 
+    var flight_data = [];
+    var burst_idx = -1;
+    var serial_number = "";
+
     function error(){
       // Pop up an error message if there is no data available for the supplied sonde.
       console.log("No data :-(");
@@ -42,7 +56,7 @@
 
         // URL to historical data.
         var path_fields = window.location.pathname.split('/');
-        //path_fields = ['S4610531']; // Testing only
+        path_fields = ['S4610774']; // Testing only
         var sonde_id = path_fields[path_fields.length - 1].replace(/^(DFM|M10|M20|IMET|IMET54|MRZ)-/,"");
         var sondehub_url = "https://api.v2.sondehub.org/sonde/" + sonde_id;
 
@@ -124,6 +138,13 @@
 
         L.control.polylineMeasure({position: 'topright', showClearControl: true}).addTo(map);
 
+        L.easyButton('<img src="./images/skewt.png">', function(btn, map){
+                plot_skewt();
+            }, 'Plot Skew-T', 'plotSkewTButton', {
+                position: 'topright'
+            }
+        ).addTo(map);
+
         // Now Attempt to grab the flight path data.
         $.ajax({
              url: sondehub_url,
@@ -140,6 +161,8 @@
 
                 console.log("Got " + data.length + " points of data! Processing...");
 
+                flight_data = data;
+
                 // Build up the sonde flight path.
                 // TODO: Styling
                 var sonde_path = L.polyline([]);
@@ -149,7 +172,6 @@
 
                 var launch_marker;
                 var landing_marker;
-                var burst_idx = -1;
 
                 var start_time = -1;
 
@@ -188,6 +210,7 @@
                 launch_alt = data[0].alt;
                 launch_observer = data[0].uploader_callsign;
                 launch_time = data[0].datetime;
+
 
                 launch_icon = L.icon({
                   iconUrl: "./images/launch_marker.png",
@@ -299,6 +322,8 @@
 
                 // Update the header.
                 $("#flight_header").html("<h1>SondeHub Historical Data <small>Serial: " + sonde_id + ", Type: " + sonde_type + "</small></h1>");
+
+                serial_number = sonde_type + " " + sonde_id + " " + launch_time;
               }
 
         });
@@ -307,6 +332,11 @@
 
 </head>
 <body onLoad="javascript:init();">
-  <div id="map"></div>
+
+<div id="skewt-dialog" title="Skew-T Plot" style='display:none;'>
+    <div id="skewt-plot"></div>
+</div>
+
+<div id="map"></div>
 </body>            
 </html>
