Stop skewt plot being overwritten

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     var serial_number = "";
     var v1_data = false;
 
+    var skewt;
+
     function error(){
       // Pop up an error message if there is no data available for the supplied sonde.
       console.log("No data :-(");
